--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babyparse": "^0.2.1",
     "nodemailer": "^1.3.0",
-    "numeral": "^1.5.3"
+    "numeral": "^1.5.3",
+    "moment": "^2.8.3"
   }
 }
